[package]
name = "leptos_picture"
version = "0.1.0"
edition = "2024"

[dependencies]
leptos = "0.8"
tokio = { version = "1", features = ["io-util", "fs", "rt","sync"], optional = true }
image = { version = "0.25", optional = true }
sha2 = { version = "0.10.8", optional = true }
hex = { version = "0.4.3", optional = true }

[features]
ssr = [ "tokio", "image", "sha2", "hex" ]
